--- a/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
+++ b/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
@@ -1,24 +1,24 @@
 <div class="w-full px-4">
     <div class="w-full my-2 p-4">
         <!-- Back to projects list Navigation-->
-        <!-- <div class="" style="width: fit-content">
+        <div class="" style="width: fit-content">
             <a class="" >
-                <div class="flex items-center hover:text-blue-500">
+                <div class="flex items-center hover:text-blue-500 cursor-pointer" [routerLink]="['../']">
                     <mat-icon class="text-base -ml-1 -mr-1">keyboard_arrow_left</mat-icon>Back
                 </div>
             </a>
-        </div> -->
+        </div>
 
         <!-- Project Details Block -->
-        <div class="w-full mt-2" *ngIf="projectDetails">
+        <div class="w-full mt-4" *ngIf="projectDetails">
 
             <!-- Title & Project Actions -->
             <div class="w-full flex justify-between">
 
                 <!-- Title Content -->
                 <div class="w-8/12">
-                    <div class="w-fit font-bold" [routerLink]="['../../clients', projectDetails.clientId]"><span class="text-gray-700 mr-1 cursor-pointer hover:underline" [routerLink]="['../']">Projects ></span><span class="text-blue-600 cursor-pointer hover:underline">{{filterRequiredIds('client', projectDetails.clientId)}}</span></div>
-                    <div class="w-full text-2xl mt-2">{{projectDetails.projectName}}</div>
+                    <div class="w-fit font-bold" [routerLink]="['../../clients', projectDetails.clientId]"><span class="text-blue-600 cursor-pointer hover:underline">{{filterRequiredIds('client', projectDetails.clientId)}}</span></div>
+                    <div class="w-full text-2xl mt-1">{{projectDetails.projectName}}</div>
                 </div>
 
                 <!-- Project Actions Content -->
@@ -49,6 +49,53 @@
                     </div>
 
 
+                </div>
+            </div>
+
+            <!-- Project Basic Details Content -->
+            <div class="w-full mt-4 border border-gray-200 rounded-lg p-4">
+
+                <!-- Title -->
+                <div class="w-full text-lg">Basic Details</div>
+
+                <!-- Basic Details Content -->
+                <div class="w-full flex flex-wrap justify-between mt-4">
+
+                    <!-- Project Name -->
+                    <div class="w-3/12">
+                        <div class="text-xs uppercase text-gray-600">Project Name</div>
+                        <div class="mt-1">{{projectDetails.projectName}}</div>
+                    </div>
+
+                    <!-- Client -->
+                    <div class="w-2/12">
+                        <div class="text-xs uppercase text-gray-600">Client</div>
+                        <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', projectDetails.projectManagerId]">{{filterRequiredIds('client', projectDetails.clientId)}}</div>
+                    </div>
+
+                    <!-- Project Manager -->
+                    <div class="w-2/12">
+                        <div class="text-xs uppercase text-gray-600">Project Manager</div>
+                        <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" *ngIf="teamMembersDetailsList.length === projectDetails.teamMembers.length" [routerLink]="['../../admin/members', projectDetails.projectManagerId]">{{filterRequiredIds('teamMember', projectDetails.projectManagerId)}}</div>
+                    </div>
+
+                    <!-- Create On -->
+                    <div class="w-2/12">
+                        <div class="text-xs uppercase text-gray-600">Created On</div>
+                        <div class="mt-1">{{projectDetails.createdOn | date:'medium'}}</div>
+                    </div>
+
+                    <!-- Create By -->
+                    <div class="w-2/12">
+                        <div class="text-xs uppercase text-gray-600">Created By</div>
+                        <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" *ngIf="teamMembersDetailsList.length === projectDetails.teamMembers.length" [routerLink]="['../../admin/members', projectDetails.createdById]">{{filterRequiredIds('teamMember', projectDetails.createdById)}}</div>
+                    </div>
+
+                    <!-- Project Name -->
+                    <div class="w-full mt-8">
+                        <div class="text-xs uppercase text-gray-600">Project Description</div>
+                        <div class="mt-1">{{projectDetails.description}}</div>
+                    </div>
                 </div>
             </div>
         </div>
